@@ -47,8 +47,8 @@ my $eb=3+4*i;
 my $B=zeroes(11)->xvals<5; #1D system
 my $gl=Photonic::Geometry::FromB->new(B=>$B, Direction0=>pdl([1])); #long
 my $haydock=Photonic::LE::NR2::Haydock->new(geometry=>$gl, nh=>10, keepStates=>1);
-my $flo=Photonic::LE::NR2::Field->new(haydock=>$haydock, nh=>10);
-my $flv=$flo->evaluate($ea, $eb);
+my $flo=Photonic::LE::NR2::Field->new(haydock=>$haydock, nh=>10, epsA=>$ea, epsB=>$eb);
+my $flv=$flo->field;
 my $fla=1/$ea;
 my $flb=1/$eb;
 my $fproml=$fla*(1-$gl->f)+$flb*($gl->f);
@@ -60,8 +60,8 @@ ok(Cagree($flv, $flx), "1D long field") or diag "got: $flv\nexpected: $flx";
 my $Bt=zeroes(1,11)->yvals<5; #2D flat system
 my $gt=Photonic::Geometry::FromB->new(B=>$Bt, Direction0=>pdl([1,0])); #trans
 my $nt=Photonic::LE::NR2::Haydock->new(geometry=>$gt, nh=>10, keepStates=>1);
-my $fto=Photonic::LE::NR2::Field->new(haydock=>$nt, nh=>10, filter=>ones(1));
-my $ftv=$fto->evaluate($ea, $eb);
+my $fto=Photonic::LE::NR2::Field->new(haydock=>$nt, nh=>10, filter=>ones(1), epsA=>$ea, epsB=>$eb);
+my $ftv=$fto->field;
 my $ftx=pdl(r2C(1), r2C(0));
 ok(Cagree($ftv, $ftx), "1D trans field");
 
